force-app/main/default/objects/BMCServiceDesk__CMDB_log__c/BMCServiceDesk__CMDB_log__c.object-meta.xml
<CustomObject>
    <description>Stores log details about the imported CMDB data.</description>
    <label>CMDB log</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CMDB logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>