force-app/main/default/objects/BMCServiceDesk__CMDB_log__c/fields/BMCServiceDesk__Class_Name__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Class_Name__c</fullName>
    <formula>IF(!ISBLANK(BMCServiceDesk__FKBMC_BaseElement__c), BMCServiceDesk__FKBMC_BaseElement__r.BMCServiceDesk__ClassName__c, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class Name</label>
    <type>Text</type>
</CustomField>