force-app/main/default/objects/BMCServiceDesk__CMDB_log__c/fields/BMCServiceDesk__Source__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BMC Discovery</fullName>
            </value>
            <value>
                <fullName>Atrium</fullName>
            </value>
            <value>
                <fullName>BBCA</fullName>
            </value>
            <value>
                <fullName>BCM</fullName>
            </value>
            <value>
                <fullName>Remedyforce Discovery</fullName>
            </value>
            <value>
                <fullName>KACE</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Remedyforce UI</fullName>
            </value>
            <value>
                <fullName>SCCM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>