force-app/main/default/objects/BMCServiceDesk__CMDB_log__c/fields/BMCServiceDesk__Type__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reconciliation</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>