force-app/main/default/objects/BMCServiceDesk__CMDB_log__c/listViews/BMCServiceDesk__All.listView-meta.xml
<ListView>
    <fullName>BMCServiceDesk__All</fullName>
    <columns>NAME</columns>
    <columns>BMCServiceDesk__Log_Date__c</columns>
    <columns>BMCServiceDesk__Status__c</columns>
    <columns>BMCServiceDesk__Type__c</columns>
    <columns>BMCServiceDesk__Source__c</columns>
    <columns>BMCServiceDesk__Description__c</columns>
    <columns>BMCServiceDesk__FKBMC_BaseElement__c</columns>
    <columns>BMCServiceDesk__Class_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>